--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -27,17 +27,18 @@
       </div>
     </div>
   </section>
-  <section class="contact_form_section  ">
+  <section class="contact_form_section ">
     <div class="contact_form col-xl-12">
       <h3>Not sure where to start?</h3>
-      <p>Contact to schedule an appointment!</p>
+      <p>Contact to schedule an appointment! <br>We'll work together to develop a custom learning plan.</p>
       <%= render 'contact/contact_form' %>
     </div>
   </section>
-  <div class="quote">
-    "Think and wonder,<br> wonder and think."
-    <div class="quote__name">-Dr. Seuss</div>
+  <div class="splash-blue-lg">
+    <%= image_tag "paint-splash-blue-lg.svg", class:"image" %>
+    <div class="quote__text">
+      <p>"Think and wonder,<br> wonder and think."</p>
+      <p class="quote__author">-Dr. Seuss</p>
+    </div>
   </div>
-
-
 </div>
