--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -27,10 +27,10 @@
       </div>
     </div>
   </section>
-  <section class="contact_form_section ">
-    <div class="contact_form col-xl-12">
+  <section class="contact_form_section col-xl-12 ">
+    <div class="contact_form col-xl-8">
       <h3>Not sure where to start?</h3>
-      <p>Contact to schedule an appointment! <br>We'll work together to develop a custom learning plan.</p>
+      <p>Contact to schedule an appointment! We'll work together to develop a custom learning plan.</p>
       <%= render 'contact/contact_form' %>
     </div>
   </section>
