--- a/app/views/pages/tutoring.html.erb
+++ b/app/views/pages/tutoring.html.erb
@@ -9,22 +9,31 @@
     <div class="hero-tutorials col-xl-12">
       <div class="flex-container col-xl-12">
         <div class="circle-container col-xl-3">
-          <div class="circle-yellow">
-            <div class="number">1</div>
+          <div class="parent-div">
+            <div class="circle-yellow col-xl-4">
+              <div class="number">1</div>
+            </div>
+            <div class="dotted-line col-xl-8"></div>
           </div>
           <h2 class="tutoring__h2">Evaluate</h2>
           <p>Meet with your student to assess their learning</p>
         </div>
         <div class="circle-container col-xl-3">
-          <div class="circle-yellow">
-            <div class="number">2</div>
+          <div class="parent-div">
+            <div class="circle-yellow col-xl-4">
+              <div class="number">2</div>
+            </div>
+            <div class="dotted-line col-xl-8 "></div>
           </div>
           <h2 class="tutoring__h2">Plan</h2>
           <p>Meet with your student to assess their learning</p>
         </div>
         <div class="circle-container col-xl-3">
-          <div class="circle-yellow">
-            <div class="number">3</div>
+          <div class="parent-div">
+            <div class="circle-yellow col-xl-4">
+              <div class="number">3</div>
+            </div>
+            <div class="dotted-line col-xl-8"></div>
           </div>
           <h2 class="tutoring__h2">Teach</h2>
           <p>Meet with your student to assess their learning</p>
