--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -13,7 +13,5 @@
   </div>
 </nav>
 <div class="nav__image jumbotron">
-  <div class="nav__header">
-
-  </div>
+  <div class="nav__header"></div>
 </div>
