--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -165,14 +165,20 @@ html {
   background-size: .2em .1em;
 }
 
-.contact_form {
+.contact_form_section {
   background-color: $yellow;
   color: $blue;
-  display: grid;
+  display: flex;
   justify-content: center;
-  justify-items: left;
-  margin: 100px auto;
+  align-items: center;
+}
+
+.contact_form {
   padding: 32px 0;
+  font-size: 1.5rem;
+  h3 {
+    font-weight: bold;
+  }
 }
 
 .contact-form-text-area {
@@ -207,3 +213,5 @@ html {
 .copyright {
   padding: 0 24px;
 }
+
+
