--- a/app/assets/stylesheets/pages/_tutoring.scss
+++ b/app/assets/stylesheets/pages/_tutoring.scss
@@ -7,6 +7,12 @@
   margin-top: 80px;
 }
 
+.flex-container {
+  display: flex;
+  justify-content: space-around;
+  margin: 32px 0;
+}
+
 .circle-container {
   display: grid;
   .tutoring__h2 {
@@ -23,18 +29,27 @@
   border-radius: 50%;
 }
 
-.flex-container {
-  display: flex;
-  justify-content: space-around;
-  margin: 32px 0;
-}
-
 .number {
   position: absolute;
   font-size: 100px;
   font-weight: 600;
   left: calc(50% - 20px/2);
   top: calc(50% - 120px/2);
+}
+
+.parent-div {
+  display: flex;
+
+}
+
+.dotted-line {
+  // margin-left: 8px;
+  margin: 0 8px;
+  width: 30%;
+  align-self: center;
+  border-color: $blue;
+  border-width: 2px;
+  border-style: dashed none none none;
 }
 
 .tutoring__h3 {
