--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,6 +1,3 @@
-// Place all the styles related to the pages controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
 @import url('https://fonts.googleapis.com/css2?family=Irish+Grover&display=swap');
 
 * {
@@ -157,12 +154,9 @@ html {
   text-align: center;
 }
 
-.learn_more-link:hover {
-  text-decoration: none;
-  background: linear-gradient(-45deg, transparent 40%, $blue 0, $blue 60%, transparent 0) 0 1em,
-    linear-gradient(45deg, transparent 40%, $blue 0, $blue 60%, transparent 0) .1em 1em;
-  background-repeat: repeat-x;
-  background-size: .2em .1em;
+.learn_more-link{
+  text-decoration: underline;
+
 }
 
 .contact_form_section {
@@ -173,11 +167,12 @@ html {
   align-items: center;
 }
 
-.contact_form {
-  padding: 32px 0;
+.contact_form-yellow {
+  padding: 64px 0;
   font-size: 1.5rem;
   h3 {
-    font-weight: bold;
+    font-weight: 600;
+    font-size: 3rem;
   }
 }
 
@@ -213,5 +208,3 @@ html {
 .copyright {
   padding: 0 24px;
 }
-
-
