--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -28,7 +28,7 @@
     </div>
   </section>
   <section class="contact_form_section col-xl-12 ">
-    <div class="contact_form col-xl-8">
+    <div class="contact_form-yellow col-xl-8">
       <h3>Not sure where to start?</h3>
       <p>Contact to schedule an appointment! We'll work together to develop a custom learning plan.</p>
       <%= render 'contact/contact_form' %>
