--- a/app/views/pages/tutoring.html.erb
+++ b/app/views/pages/tutoring.html.erb
@@ -53,7 +53,7 @@
     <div class="flex-container__pricing">
       <div class="circle-container col-xl-5">
         <div class="circle-yellow">
-          <div class="number__pricing">$50</div>
+          <div class="number__pricing">$75</div>
         </div>
         <h4>Initial consultation and student evaluation.</h4>
       </div>
@@ -61,7 +61,7 @@
         <div class="circle-yellow">
           <div class="number__pricing">$30</div>
         </div>
-        <h4>30 minutes tutoring sessions.</h4>
+        <h4>For each 30 minute tutoring session</h4>
       </div>
     </div>
   </section>
