--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -58,7 +58,6 @@ html {
   text-transform: uppercase;
   color: $peach;
   font-size: 1.5rem;
-  font-weight: 600;
   padding: 0 32px;
 }
 
@@ -73,16 +72,29 @@ html {
   position: relative;
 }
 
-.nav__header {
+.nav__header-blue {
   background-color: $blue;
   width: 800px;
-  height: 150px;
+  height: 200px;
   color: $peach;
   text-align: center;
   position: absolute;
   left: 50%;
   margin-left: -400px;
-  margin-top: 175px;
+  margin-top: 150px;
+}
+
+.nav__header-content {
+  height: 100%;
+  padding: 24px 60px;
+  p {
+    font-size: 1.5rem;
+    margin: 0;
+  }
+}
+
+.nav__header-h1 {
+  font-size: 3rem;
 }
 
 .h1__home {
@@ -96,7 +108,7 @@ html {
 }
 
 .hero-section {
-  margin: 100px 0;
+  margin: 150px 0;
 }
 
 .hero {
@@ -150,13 +162,11 @@ html {
   color: $blue;
   position: absolute;
   font-size: 1.5rem;
-  font-weight: bold;
-  text-align: center;
+
 }
 
 .learn_more-link{
   text-decoration: underline;
-
 }
 
 .contact_form_section {
