--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -11,16 +11,16 @@
   <section class="steps_container cursor">
     <h3 class="steps_container-h3">I provide two learning options to assist your child with their education:</h3>
     <div class="steps_container--grid col-xl-12">
-      <div class="paint-splash-img col-lg-4">
+      <div class="paint-splash-img col-xl-4">
         <%= image_tag "paint-splash-2.svg", class:"image" %>
-        <div class="steps__text">
-          <p>Private 30 minute tutoring sessions</p>
+        <div class="steps__text bold700">
+          <p class="width100">Private 30 minute tutoring sessions</p>
           <%= link_to "Learn More", tutoring_path,class: "learn_more-link"%>
         </div>
       </div>
-      <div class="paint-splash-img col-lg-4">
+      <div class="paint-splash-img col-xl-4">
         <%= image_tag "paint-splash-1.svg", class:"image" %>
-        <div class="steps__text">
+        <div class="steps__text bold700">
           <p>Access to online learning resources</p>
           <%= link_to "Learn More", resources_path,class: "learn_more-link"%>
         </div>
