--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,9 +1,9 @@
 <nav class="nav-bar">
   <div class="nav-bar__links">
-    <%= link_to "Home", root_path, class: "nav_link" %>
+    <%= link_to "Home", root_path, class: "nav_link semibold600" %>
   </div>
   <div class="nav-bar__links">
-    <%= link_to "Contact", contact_path(@contact,:anchor => "form"), class: "nav_link" %>
+    <%= link_to "Contact", contact_path(@contact,:anchor => "form"), class: "nav_link semibold600" %>
 
     <% if user_signed_in? %>
     <%= link_to('Logout',destroy_user_session_path, method: :delete, class: "nav_link") %>
@@ -12,6 +12,5 @@
     <% end %>
   </div>
 </nav>
-<div class="nav__image jumbotron">
-  <div class="nav__header"></div>
-</div>
+<!-- create partial -->
+<%= render partial: "shared/header" %>
