--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,10 @@
+<div class="nav__image-home jumbotron">
+  <div class="nav__header-blue-home">
+    <h1 class="header__text-h1">Welcome! Class is in session.</h1>
+    <p>Online lessons from a certified teacher specializing in Kindergarten through 5th Grade.</p>
+  </div>
+</div>
+
 <div class="container">
   <section class="hero-section ">
     <div class="hero col-xl-12">
@@ -37,8 +44,8 @@
   <div class="splash-blue-lg">
     <%= image_tag "paint-splash-blue-lg.svg", class:"image" %>
     <div class="quote__text">
-      <p>"Think and wonder,<br> wonder and think."</p>
-      <p class="quote__author">-Dr. Seuss</p>
+      <p>"Today is a <br> great day,<br> to learn <br> something <br> new."</p>
+
     </div>
   </div>
 </div>
