--- a/app/assets/stylesheets/pages/_resources.scss
+++ b/app/assets/stylesheets/pages/_resources.scss
@@ -5,25 +5,27 @@
   align-items: center;
 }
 
-
 .container-worksheets {
   display: flex;
 }
 
 .worksheets__grid {
-  width: 50%;
   display: grid;
   grid-template-columns: auto 1fr;
-  grid-template-rows: repeat(3, 1fr);
-  grid-column-gap: 18px;
+  // grid-template-rows: repeat(3, 1fr);
+  grid-column-gap: 12px;
 }
 
 .images-worksheets {
-  grid-row: 1 / 4;
+  grid-row: 1 / 5;
 }
 
 .videos {
   display: grid;
   grid-template-columns: repeat(2, auto);
   grid-gap: 18px;
+}
+
+iframe {
+  width: 100%;
 }
