--- a/app/views/pages/tutoring.html.erb
+++ b/app/views/pages/tutoring.html.erb
@@ -1,15 +1,14 @@
 <%= render partial: "shared/header" %>
-
-<div class="container">
+<div class="container margin-top-100">
   <section>
-    <div class="header col-xl-12">
-      <p>One-on-one learning is one of the most effective ways to meet your child's needs. I specialize in reading, writing, and math.</p>
-      <p>I use the following 4-step process for all students.</p>
+    <div class=" col-xl-12">
+      <h2 class="header__text-h2">One-on-one learning is one of the most effective ways to meet your child's needs. I specialize in reading, writing, and math subjects and can help your child excel in these areas.</h2>
+      <h3 class="margin-top-50">I use the following 4-step process for all students.</h3>
     </div>
   </section>
   <section>
-    <div class="hero-tutorials col-xl-12">
-      <div class="flex-container col-xl-12">
+    <div class="hero-tutorials margin-top-50 col-xl-12">
+      <div class="flex-container ">
         <div class="circle-container col-xl-3">
           <div class="parent-div">
             <div class="circle-yellow col-xl-4">
@@ -28,7 +27,7 @@
             <div class="dotted-line col-xl-8 "></div>
           </div>
           <h2 class="tutoring__h2">Plan</h2>
-          <p>Meet with your student to assess their learning</p>
+          <p>Create a learning plan based on the goals we set.</p>
         </div>
         <div class="circle-container col-xl-3">
           <div class="parent-div">
@@ -38,32 +37,48 @@
             <div class="dotted-line col-xl-8"></div>
           </div>
           <h2 class="tutoring__h2">Teach</h2>
-          <p>Meet with your student to assess their learning</p>
+          <p>Schedule 30 minute sessions, progressively building skills.</p>
         </div>
         <div class="circle-container col-xl-3">
           <div class="circle-yellow">
             <div class="number">4</div>
           </div>
           <h2 class="tutoring__h2">Assess</h2>
-          <p>Meet with your student to assess their learning</p>
+          <p>Conduct an evaluation to measure progress.</p>
         </div>
       </div>
     </div>
   </section>
   <section>
-    <h3 class="tutoring__h3">Pricing</h3>
-    <div class="flex-container__pricing">
-      <div class="circle-container col-xl-5">
+    <h3 class="tutoring__h3 mt-5">Pricing</h3>
+    <div class="flex-container__pricing-75 mt-5">
+      <div class="circle-container-75 ">
         <div class="circle-yellow">
           <div class="number__pricing">$75</div>
         </div>
-        <h4>Initial consultation and student evaluation.</h4>
+      </div>
+      <div>
+        <p>Required for all first time students.</p>
+      </div>
+    </div>
+    <h4 class="header__text-h4 margin-top-50">Initial consultation and student evaluation.</h4>
+  </section>
+  <div class="dotted-line-100 col-xl-12 margin-top-50"></div>
+  <section class="mt-5">
+    <div class="flex-container__pricing">
+      <div class="circle-container col-xl-5">
+        <div class="circle-yellow">
+          <div class="number__pricing">$40</div>
+        </div>
+        <h4 class="header__text-h4 margin-top-50">Private Tutoring</h4>
+        <p>30 minute sessions</p>
       </div>
       <div class="circle-container col-xl-5">
         <div class="circle-yellow">
-          <div class="number__pricing">$30</div>
+          <div class="number__pricing">$20</div>
         </div>
-        <h4>For each 30 minute tutoring session</h4>
+        <h4 class="header__text-h4 margin-top-50">Homework Help</h4>
+        <p>30 minute sessions</p>
       </div>
     </div>
   </section>
