--- a/app/assets/stylesheets/pages/_tutoring.scss
+++ b/app/assets/stylesheets/pages/_tutoring.scss
@@ -1,12 +1,3 @@
-.header {
-  font-size: 1.5rem;
-  margin-top: 120px;
-}
-
-.hero-tutorials {
-  margin-top: 80px;
-}
-
 .flex-container {
   display: flex;
   justify-content: space-around;
@@ -14,6 +5,14 @@
 }
 
 .circle-container {
+    display: grid;
+  .tutoring__h2 {
+    margin-top: 48px;
+    font-weight: $semibold600;
+  }
+}
+
+.circle-container-75 {
   display: grid;
   .tutoring__h2 {
     margin-top: 48px;
@@ -32,20 +31,26 @@
 .number {
   position: absolute;
   font-size: 100px;
-  font-weight: 600;
+  font-weight: $semibold600;
   left: calc(50% - 20px/2);
   top: calc(50% - 120px/2);
 }
 
 .parent-div {
   display: flex;
-
 }
 
 .dotted-line {
-  // margin-left: 8px;
   margin: 0 8px;
   width: 30%;
+  align-self: center;
+  border-color: $blue;
+  border-width: 2px;
+  border-style: dashed none none none;
+}
+
+.dotted-line-100 {
+  width: 100%;
   align-self: center;
   border-color: $blue;
   border-width: 2px;
@@ -56,20 +61,25 @@
   font-weight: 600;
 }
 
+.flex-container__pricing-75 {
+  width: 400px;
+  display: grid;
+  grid-template-columns: repeat(2, auto);
+}
+
 .flex-container__pricing {
-  display: flex;
-  justify-content: space-around;
-  margin: 32px 0;
+    display: flex;
+    margin: 32px 0;
   h4 {
-    margin-top: 48px;
-    font-weight: 600;
+    // margin-top: 48px;
+    font-weight: $semibold600;
   }
 }
 
 .number__pricing {
   position: absolute;
   font-size: 72px;
-  font-weight: 600;
+  font-weight: $semibold600;
   left: calc(50% - 36px/2);
   top: calc(50% - 72px/2);
 }
