--- a/app/views/pages/resources.html.erb
+++ b/app/views/pages/resources.html.erb
@@ -29,7 +29,7 @@
   <h3 class="header__text-h3 margin-top-50 col-xl-12">Video Lessons</h3>
   <div class="videos col-xl-12 ">
     <iframe width="560" height="315" src="https://www.youtube.com/embed/EhIFS9T7dNA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/EhIFS9T7dNA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/CZQeXJeEh5I" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/EhIFS9T7dNA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/EhIFS9T7dNA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
