--- a/app/views/pages/tutoring.html.erb
+++ b/app/views/pages/tutoring.html.erb
@@ -11,30 +11,30 @@
       <div class="flex-container ">
         <div class="circle-container col-xl-3">
           <div class="parent-div">
-            <div class="circle-yellow col-xl-4">
+            <div class="circle-yellow ">
               <div class="number">1</div>
             </div>
-            <div class="dotted-line col-xl-8"></div>
+            <div class="dotted-line "></div>
           </div>
           <h2 class="tutoring__h2">Evaluate</h2>
           <p>Meet with your student to assess their learning</p>
         </div>
         <div class="circle-container col-xl-3">
           <div class="parent-div">
-            <div class="circle-yellow col-xl-4">
+            <div class="circle-yellow ">
               <div class="number">2</div>
             </div>
-            <div class="dotted-line col-xl-8 "></div>
+            <div class="dotted-line "></div>
           </div>
           <h2 class="tutoring__h2">Plan</h2>
           <p>Create a learning plan based on the goals we set.</p>
         </div>
         <div class="circle-container col-xl-3">
           <div class="parent-div">
-            <div class="circle-yellow col-xl-4">
+            <div class="circle-yellow ">
               <div class="number">3</div>
             </div>
-            <div class="dotted-line col-xl-8"></div>
+            <div class="dotted-line "></div>
           </div>
           <h2 class="tutoring__h2">Teach</h2>
           <p>Schedule 30 minute sessions, progressively building skills.</p>
