--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -5,7 +5,7 @@
     <% elsif current_page?(resources_path) %>
     <h1 class="header__text-h1">Learning Resources</h1>
     <% elsif current_page?( new_user_session_path) %>
-    <h1 class="header__text-h1">Login to access online resources</h1>
+    <h1 class="header__text-h1">Login to schedule a tutoring session</h1>
     <% end %>
   </div>
 </div>
