updated quote and added new lg image

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -27,10 +27,10 @@ html {
   justify-self: center;
   align-self: center;
   position: absolute;
-  color: $yellow;
+  color: $peach;
   font-family: $grover;
   text-align: center;
-  font-size: 3rem;
+  font-size: 3.5rem;
   letter-spacing: 1px;
 }
 
