--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -42,9 +42,9 @@
     </div>
   </section>
   <div class="splash-blue-lg">
-    <%= image_tag "paint-splash-blue-lg.svg", class:"image" %>
+    <%= image_tag "paint-splash-lg.svg", class:"image" %>
     <div class="quote__text">
-      <p>"Today is a <br> great day,<br> to learn <br> something <br> new."</p>
+      <p>"Today is a great day,<br> to learn something new."</p>
 
     </div>
   </div>
