--- a/app/views/pages/resources.html.erb
+++ b/app/views/pages/resources.html.erb
@@ -9,25 +9,111 @@
     </ul>
   </div>
   <h3 class="col-xl-12 mt-3 ">Check out these free resources below:</h3>
-  <h3 class="header__text-h3 col-xl-12 margin-top-50 ">Worksheets and activities</h3>
-  <div class="container-worksheets col-xl-12">
-    <div class="worksheets__grid">
-      <%= image_tag "plantsb&w_img.jpg", class:"images-worksheets" %>
-      <p>Subject:<br>Kindergarten - 2nd grade Science</p>
-      <p>Directions: What do plants need? After watching the video, "Plants- It's Alive!", download and print the 'What Plants Need' worksheet.</p>
-      <%= link_to "Download 'What Plants Need (B&W)'", "pdf/Plants_B&W.pdf", skip_pipeline: true%>
-       <%= link_to "Download 'What Plants Need (Color)'", "pdf/Plants_Color.pdf", skip_pipeline: true%>
+  <div class="header__flex margin-top-50">
+    <div class="dotted-line-33"></div>
+    <div>
+      <h3 class="header__text-h3">Worksheets and activities</h3>
     </div>
-    <div class="worksheets__grid">
-      <%= image_tag "plantsb&w_img.jpg", class:"images-worksheets" %>
-      <p>Subject:<br>Kindergarten - 2nd grade Science</p>
-      <p>Directions: What do plants need? After watching the video, "Plants- It's Alive!", download and print the 'What Plants Need' worksheet.</p>
-      <%= link_to "Download 'What Plants Need (B&W)'", "pdf/Plants_B&W.pdf"%>
-      <%= link_to "Download 'What Plants Need (Color)'", "pdf/Plants_Color.pdf", skip_pipeline: true%>
+    <div class="dotted-line-33"></div>
+  </div>
+
+<div class="container__parent margin-top-25 ">
+  <div class="container-worksheets m-2">
+    <div class="worksheets__grid m-3">
+      <div class="worksheets__title">
+        <h4 class="header__text-h4">What Plants Need</h4>
+      </div>
+      <div class="images-worksheets">
+        <%= image_tag "plantsb&w_img.jpg", class:"image-ws" %>
+      </div>
+      <div>
+        <p class="my-0"><span class="span-subject">Subject:</span><br>Kindergarten - 2nd grade Science</p>
+      </div>
+      <div>
+        <p class="my-0"><span class="span-subject">Directions: </span>What do plants need? After watching the video, "Plants- It's Alive!", download and print the 'What Plants Need' worksheet.</p>
+      </div>
+      <div class="downloads">
+        Downloads:<br>
+        <%= link_to "Download What Plants Need (B&W)", "pdf/Plants_B&W.pdf", skip_pipeline: true%><br>
+        <%= link_to "Download What Plants Need (Color)", "pdf/Plants_Color.pdf", skip_pipeline: true%>
+      </div>
+    </div>
+    </div>
+
+  <div class="container-worksheets m-2">
+    <div class="worksheets__grid m-3">
+      <div class="worksheets__title">
+        <h4 class="header__text-h4">Slugs</h4>
+      </div>
+      <div class="images-worksheets">
+        <%= image_tag "slug_img.jpg", class:"image-ws" %>
+      </div>
+      <div>
+        <p class="my-0"><span class="span-subject">Subject:</span><br>Kindergarten - 2nd grade Science</p>
+      </div>
+      <div>
+        <p class="my-0"><span class="span-subject">Directions: </span>Where do slugs live? After watching the video, "Slow Moving Slug", download and print the 'Slugs Habitat' worksheet.</p>
+      </div>
+      <div class="downloads">
+        Downloads:<br>
+        <%= link_to "Download Slugs Habitat (Color)", "pdf/slug.pdf", skip_pipeline: true%><br>
+
+      </div>
     </div>
   </div>
-  <h3 class="header__text-h3 margin-top-50 col-xl-12">Video Lessons</h3>
-  <div class="videos col-xl-12 ">
+
+    <div class="container-worksheets m-2 ">
+    <div class="worksheets__grid m-3">
+      <div class="worksheets__title">
+        <h4 class="header__text-h4">What Plants Need</h4>
+      </div>
+      <div class="images-worksheets">
+        <%= image_tag "plantsb&w_img.jpg", class:"image-ws" %>
+      </div>
+      <div>
+        <p class="my-0"><span class="span-subject">Subject:</span><br>Kindergarten - 2nd grade Science</p>
+      </div>
+      <div>
+        <p class="my-0"><span class="span-subject">Directions: </span>What do plants need? After watching the video, "Plants- It's Alive!", download and print the 'What Plants Need' worksheet.</p>
+      </div>
+      <div class="downloads">
+        Downloads:<br>
+        <%= link_to "Download What Plants Need (B&W)", "pdf/Plants_B&W.pdf", skip_pipeline: true%><br>
+        <%= link_to "Download What Plants Need (Color)", "pdf/Plants_Color.pdf", skip_pipeline: true%>
+      </div>
+    </div>
+    </div>
+
+      <div class="container-worksheets m-2">
+    <div class="worksheets__grid m-3">
+      <div class="worksheets__title">
+        <h4 class="header__text-h4">What Plants Need</h4>
+      </div>
+      <div class="images-worksheets">
+        <%= image_tag "plantsb&w_img.jpg", class:"image-ws" %>
+      </div>
+      <div>
+        <p class="my-0"><span class="span-subject">Subject:</span><br>Kindergarten - 2nd grade Science</p>
+      </div>
+      <div>
+        <p class="my-0"><span class="span-subject">Directions: </span>What do plants need? After watching the video, "Plants- It's Alive!", download and print the 'What Plants Need' worksheet.</p>
+      </div>
+      <div class="downloads">
+        Downloads:<br>
+        <%= link_to "Download What Plants Need (B&W)", "pdf/Plants_B&W.pdf", skip_pipeline: true%><br>
+        <%= link_to "Download What Plants Need (Color)", "pdf/Plants_Color.pdf", skip_pipeline: true%>
+      </div>
+    </div>
+    </div>
+</div>
+  <div class="header__flex margin-top-50 ">
+    <div class="dotted-line-33"></div>
+    <div>
+      <h3 class="header__text-h3">Video Lessons</h3>
+    </div>
+    <div class="dotted-line-33"></div>
+  </div>
+  <div class="videos col-xl-12 margin-top-25">
     <iframe width="560" height="315" src="https://www.youtube.com/embed/EhIFS9T7dNA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/CZQeXJeEh5I" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/EhIFS9T7dNA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
