--- a/app/assets/stylesheets/_assets.scss
+++ b/app/assets/stylesheets/_assets.scss
@@ -18,6 +18,32 @@ $semibold600: 600;
 $bold700: 700;
 
 
+// dotted line styling
+.dotted-line {
+  margin: 0 8px;
+  width: 150px;
+  align-self: center;
+  border-color: $blue;
+  border-width: 2px;
+  border-style: dashed none none none;
+}
+
+.dotted-line-100 {
+  width: 100%;
+  align-self: center;
+  border-color: $blue;
+  border-width: 2px;
+  border-style: dashed none none none;
+}
+
+.dotted-line-33 {
+  width: 33.33%;
+  align-self: center;
+  border-color: $blue;
+  border-width: 2px;
+  border-style: dashed none none none;
+}
+
 .width100 {
   width: 100%;
 }
@@ -33,7 +59,9 @@ $bold700: 700;
 
 // }
 
-// .header__text-h3
+.header__text-h3 {
+  font-weight: $bold700
+}
 
 .header__text-h4 {
   font-weight: $semibold600;
@@ -51,8 +79,12 @@ $bold700: 700;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  height: 20vh;
+
+  height: 200px;
   position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .nav__header-blue {
@@ -60,9 +92,7 @@ $bold700: 700;
   width: 800px;
   height: 150px;
   color: $peach;
-  position: absolute;
-  left: 50%;
-  margin-left: -400px;
+  margin-top: 150px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -75,8 +105,11 @@ $bold700: 700;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  height: 50vh;
+  height: 400px;
   position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .nav__header-blue-home {
@@ -84,10 +117,7 @@ $bold700: 700;
   width: 800px;
   height: 200px;
   color: $peach;
-  position: absolute;
-  left: 50%;
-  margin-left: -400px;
-  margin-top: 200px;
+  margin-top: 350px;
   text-align: center;
   display: flex;
   flex-direction: column;
@@ -107,3 +137,11 @@ $bold700: 700;
 .margin-top-50 {
   margin-top: 50px;
 }
+
+.margin-top-25 {
+  margin-top: 25px;
+}
+
+//mixins
+
+
