--- a/app/assets/stylesheets/pages/_resources.scss
+++ b/app/assets/stylesheets/pages/_resources.scss
@@ -3,21 +3,32 @@
   display: flex;
   justify-content: left;
   align-items: center;
+  font-weight: $semibold600;
+  font-size: 1.5rem;
+}
+
+.container__parent {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
 }
 
 .container-worksheets {
-  display: flex;
+   background-color: $yellow;
 }
 
 .worksheets__grid {
   display: grid;
   grid-template-columns: auto 1fr;
-  // grid-template-rows: repeat(3, 1fr);
-  grid-column-gap: 12px;
+  grid-column-gap: 16px;
+}
+
+.worksheets__title {
+  grid-column: 1 / 3;
 }
 
 .images-worksheets {
-  grid-row: 1 / 5;
+  grid-row: 2 / 5;
+  justify-self:center;
 }
 
 .videos {
@@ -28,4 +39,14 @@
 
 iframe {
   width: 100%;
+}
+
+.header__flex {
+  display: flex;
+  justify-content: space-between;
+}
+
+.span-subject {
+  text-decoration: underline;
+  font-weight: $bold700;
 }
