--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,26 +8,26 @@
 <div class="container ">
   <section class="hero-section ">
     <div class="hero col-xl-12">
-      <%= image_tag "profile-img-sm.png", class:"profile-img" %>
+      <%= image_tag "profile-img-sm.png", class:"profile-img " %>
       <div class="hero__content">
         <h3 class="hero__content-h3">Meet Mrs. Abowd</h3>
         <p class="hero__content-p">Teacher turned developer, I have a passion for helping others. I've been an elementary school teacher for ten years and have taught both first and second grade. I've transitioned from helping students in the classroom, to helping students over the web.</p>
       </div>
     </div>
   </section>
-  <section class="cursor">
+  <section >
     <h3 class="steps_container-h3 align-center margin-top-50">I provide two learning options to assist your child with their education:</h3>
     <div class="steps_container--grid margin-top-50 mx-auto col-xl-12">
-      <div class="paint-splash-img col-xl-4">
-        <%= image_tag "paint-splash-2.svg", class:"image" %>
-        <div class="steps__text">
-          <p class="width100">Private 30 minute tutoring sessions</p>
+      <div class="paint-splash-img ">
+        <%= image_tag "paint-splash-2.svg", class:"image img-fluid" %>
+        <div class="steps__text col-xl-6">
+          <p class="">Private 30 minute tutoring sessions</p>
           <%= link_to "Learn More", tutoring_path,class: "learn_more-link"%>
         </div>
       </div>
-      <div class="paint-splash-img col-xl-4">
-        <%= image_tag "paint-splash-1.svg", class:"image" %>
-        <div class="steps__text bold700">
+      <div class="paint-splash-img ">
+        <%= image_tag "paint-splash-1.svg", class:"image img-fluid" %>
+        <div class="steps__text col-xl-6">
           <p>Access to online learning resources</p>
           <%= link_to "Learn More", resources_path,class: "learn_more-link"%>
         </div>
@@ -42,7 +42,7 @@
     </div>
   </section>
   <div class="splash-blue-lg">
-    <%= image_tag "paint-splash-lg.svg", class:"image" %>
+    <%= image_tag "paint-splash-lg.svg", class:"image img-fluid" %>
     <div class="quote__text">
       <p>"Today is a great day,<br> to learn something new."</p>
 
