--- a/app/views/pages/resources.html.erb
+++ b/app/views/pages/resources.html.erb
@@ -32,8 +32,8 @@
       <div>
         <p class="my-0"><span class="span-subject">Directions: </span>What do plants need? After watching the video, "Plants- It's Alive!", download and print the 'What Plants Need' worksheet.</p>
       </div>
-      <div class="downloads">
-        Downloads:<br>
+      <div class="downloads"><span class="span-subject">
+        Downloads:</span><br>
         <%= link_to "Download What Plants Need (B&W)", "pdf/Plants_B&W.pdf", skip_pipeline: true%><br>
         <%= link_to "Download What Plants Need (Color)", "pdf/Plants_Color.pdf", skip_pipeline: true%>
       </div>
@@ -54,8 +54,8 @@
       <div>
         <p class="my-0"><span class="span-subject">Directions: </span>Where do slugs live? After watching the video, "Slow Moving Slug", download and print the 'Slugs Habitat' worksheet.</p>
       </div>
-      <div class="downloads">
-        Downloads:<br>
+      <div class="downloads"><span class="span-subject">
+        Downloads:</span><br>
         <%= link_to "Download Slugs Habitat (Color)", "pdf/slug.pdf", skip_pipeline: true%><br>
 
       </div>
@@ -76,8 +76,8 @@
       <div>
         <p class="my-0"><span class="span-subject">Directions: </span>What do plants need? After watching the video, "Plants- It's Alive!", download and print the 'What Plants Need' worksheet.</p>
       </div>
-      <div class="downloads">
-        Downloads:<br>
+      <div class="downloads"><span class="span-subject">
+        Downloads:</span><br>
         <%= link_to "Download What Plants Need (B&W)", "pdf/Plants_B&W.pdf", skip_pipeline: true%><br>
         <%= link_to "Download What Plants Need (Color)", "pdf/Plants_Color.pdf", skip_pipeline: true%>
       </div>
@@ -98,8 +98,8 @@
       <div>
         <p class="my-0"><span class="span-subject">Directions: </span>What do plants need? After watching the video, "Plants- It's Alive!", download and print the 'What Plants Need' worksheet.</p>
       </div>
-      <div class="downloads">
-        Downloads:<br>
+      <div class="downloads"><span class="span-subject">
+        Downloads:</span><br>
         <%= link_to "Download What Plants Need (B&W)", "pdf/Plants_B&W.pdf", skip_pipeline: true%><br>
         <%= link_to "Download What Plants Need (Color)", "pdf/Plants_Color.pdf", skip_pipeline: true%>
       </div>
