--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,11 +1,11 @@
   <!-- footer -->
-  <div id="footer" class="container-fluid">
-    <div class="copyright">
+  <div id="footer" class=" container-fluid py-3">
+    <div class="copyright ">
     <i class="far fa-copyright"></i> 2020 Copyright: Teacher In Tech
     </div>
     <ul>
-      <li class="footer__li">Testimonials</li>
-      <li class="footer__li">Contact</li>
-      <li class="footer__li">Log In</li>
+      <li class="footer__li mx-2">Testimonials</li>
+      <li class="footer__li mx-2">Contact</li>
+      <li class="footer__li mx-2">Log In</li>
     </ul>
   </div>
