--- a/app/assets/stylesheets/_assets.scss
+++ b/app/assets/stylesheets/_assets.scss
@@ -142,6 +142,25 @@ $bold700: 700;
   margin-top: 25px;
 }
 
-//mixins
+// yellow-form
+ .section-yellow {
+  background-color: $yellow;
+  color: $blue;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: -100px;
 
+ }
 
+ .form-yellow {
+  padding: 64px 0;
+  font-size: 1.5rem;
+ }
+
+ .form__text-area {
+    width: 100%;
+    border-radius: 4px;
+    border: 4px solid $blue;
+    background-color: $peach;
+ }
