--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,27 +1,40 @@
-<%= render partial: "shared/header" %>
-
-<h2>Sign up</h2>
-
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= f.error_notification %>
-
-  <div class="form-inputs">
-    <%= f.input :email,
+<div class="nav__image jumbotron">
+</div>
+<div class="container">
+  <section class="section-yellow col-xl-12 mb-5">
+    <div class="contact_form-yellow col-xl-8">
+      <h1 class="header__text-h1">Sign Up</h1>
+      <p>Please sign up if you would like to easily schedule tutoring sessions online.</p>
+      <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+      <%= f.error_notification %>
+      <!-- <div class="form-inputs"> -->
+        <%= f.input :name,
                 required: true,
                 autofocus: true,
-                input_html: { autocomplete: "email" }%>
-    <%= f.input :password,
+                input_html: { autocomplete: "name" , class:
+                  "form__text-area "}%>
+        <%= f.input :email,
+                required: true,
+                autofocus: true,
+                input_html: { autocomplete: "email", class:
+                  "form__text-area " }%>
+        <!-- <div class="col-xl-12"> -->
+        <%= f.input :password,
                 required: true,
                 hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :password_confirmation,
+                input_html: { autocomplete: "new-password", class:
+                  "form__text-area " } %>
+        <!-- </div> -->
+        <%= f.input :password_confirmation,
                 required: true,
-                input_html: { autocomplete: "new-password" } %>
-  </div>
-
-  <div class="form-actions">
-    <%= f.button :submit, "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+                input_html: { autocomplete: "new-password", class:
+                  "form__text-area" } %>
+      <!-- </div> -->
+      <div class="form-actions">
+        <%= f.button :submit, "Sign up", class: "btn btn__form" %>
+      </div>
+      <% end %>
+      <%= render "devise/shared/links" %>
+    </div>
+  </section>
+</div>
