--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,9 +1,9 @@
 <div class="nav__image jumbotron">
   </div>
 <div class="container">
-  <section class="contact_form_section col-xl-12 ">
-    <div class="contact_form-yellow col-xl-8">
-      <h3>Thank you for your interest</h3>
+  <section class="section-yellow col-xl-12 mb-5">
+    <div class="form-yellow col-xl-8 ">
+      <h1 class="header__text-h1">Thank you for your interest</h1>
       <p>If you’d like to set up an appointment, please get in touch using the following contact form.</p>
       <%= render 'contact/contact_form' %>
     </div>
