--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,7 +4,7 @@
       <p>Online lessons from a certified teacher specializing in Kindergarten through 5th Grade.</p>
   </div>
 </div>
-
+   <%= render 'shared/flashes' %>
 <div class="container ">
   <section class="hero-section ">
     <div class="hero col-xl-12">
@@ -20,15 +20,15 @@
     <div class="steps_container--grid margin-top-50 mx-auto col-xl-12">
       <div class="paint-splash-img ">
         <%= image_tag "paint-splash-2.svg", class:"image img-fluid" %>
-        <div class="steps__text col-xl-6">
-          <p class="">Private 30 minute tutoring sessions</p>
+        <div class="learn_more-text col-xl-6">
+          <p class="">Private 30 minute tutoring&nbsp;sessions</p>
           <%= link_to "Learn More", tutoring_path,class: "learn_more-link"%>
         </div>
       </div>
       <div class="paint-splash-img ">
         <%= image_tag "paint-splash-1.svg", class:"image img-fluid" %>
-        <div class="steps__text col-xl-6">
-          <p>Access to online learning resources</p>
+        <div class="learn_more-text col-xl-6">
+          <p>Access to online learning&nbsp;resources</p>
           <%= link_to "Learn More", resources_path,class: "learn_more-link"%>
         </div>
       </div>
