--- a/app/views/shared/_flashes.html.erb
+++ b/app/views/shared/_flashes.html.erb
@@ -1,4 +1,5 @@
-<% if notice %>
+<div class="container">
+  <% if notice %>
   <div class="alert alert-success alert-dismissible" role="alert">
     <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
     <%= notice %>
@@ -6,8 +7,9 @@
 <% end %>
 <% if alert %>
   <div class="alert alert-danger alert-dismissible" role="alert">
-
     <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
     <%= alert %>
   </div>
 <% end %>
+</div>
+
